fix download-link overflow

--- a/public/style.css
+++ b/public/style.css
@@ -16,3 +16,9 @@ body {
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
+.download-link {
+	max-width: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
